read up on tricks to avoid the white space between the inline elements and corrected some. Now having trouble with my column of 2 being way off to the side for some reason.

--- a/styles/base.css
+++ b/styles/base.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: white;
-  margin: 0;
+  margin: auto;
   padding: 0;
   width: 960;
 }
